# vector-algebra

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  NOTES.md  README.md  example.cpp  version.tpl
.github/workflows/: main.yaml
Math/include/vector/: Types  Types.hpp  Vector.hpp
Math/include/vector/matrix/: Matrix.hpp
Math/include/vector/simple/: Vector2.hpp
Math/tests/: vector_test.cpp
include/gof/: Types  common.hpp
include/gof/math/: common.hpp  types
include/gof/math/matrix/: Matrix.hpp
include/gof/math/vector/: Vector.hpp  Vector.inl
include/gof/math/vector/simple/: Vector.hpp
include/gof/matrix/: Matrix.hpp
include/gof/simple/: Vector2.hpp  vector.hpp
include/gof/vector/: Vector.hpp
include/vector/: Matrix.hpp  Vector.hpp  Vector2.hpp
src/: example.cpp
tests/: test_matrix.cpp  test_vector.cpp  vector_test.cpp
vector/: CMakeLists.txt  README.md
vector/include/vector/: Vector2.hpp  Vector3.hpp  vector.hpp
vector/src/: vector.cpp
vector/tests/: vector_test.cpp
